--- a/challenges/badtable/challenge.yml
+++ b/challenges/badtable/challenge.yml
@@ -55,7 +55,7 @@ healthcheck: null
 # Accepts strings or dictionaries of CTFd API data
 flags:
     # A static case sensitive flag
-    - ictf{SomeTablesAreReallyBad}
+    - ictf{LetsTableThisIssue}
     # A static case sensitive flag created with a dictionary
     #- {
     #    type: "static",
